feat: paciente com a possibilidade de dois telefones; visualizar de cidade e paciente

--- a/ubs/patient/templates/patient/list.html
+++ b/ubs/patient/templates/patient/list.html
@@ -80,8 +80,8 @@
                                     {% else %} 
                                         <td >-----------------------</td>
                                     {% endif %}
-                                    {% if object.get_phone %} 
-                                        <td> {{ object.get_phone }} </td>
+                                    {% if object.phone_number_main %} 
+                                        <td> {{ object.phone_number_main }} </td>
                                     {% else %} 
                                         <td >----------------------</td>
                                     {% endif %}
