--- a/ubs/patient/templates/patient/add.html
+++ b/ubs/patient/templates/patient/add.html
@@ -23,7 +23,13 @@
                                     {% for field in form %}
                                         {% if field.errors %}
                                             <div
-                                                class="col-md-{% if field.name in 'name' %}8{% elif field.name in 'main_complaint\email' %}6{% elif field.name in 'username\sex\birth_date\marital_status\phone\cpf\rg\matricula' %}4{% elif field.name in 'nome_mae\nome_pai' %}6{% else %}12{% endif %} margin-bottom-15 has-error has-feedback">
+                                                class="col-md-{% if field.name in 'full_name\ocupation\email' %}6
+                                                {% elif field.name in 'color\sex\marital_state\date_birth\local_birth\Type_Logradouro_idLogradouro\address_number\address_cep\Medical_Insurance_idMedical_insurance\Color_idColor\Marital_State_idMarital_State' %}4
+                                                {% elif field.name in 'Color_idColor' %}3
+                                                {% elif field.name in 'health_insurance' %}3
+                                                {% elif field.name in 'summary' %}12
+                                                {% else %}6
+                                                {% endif %} margin-bottom-15">
                                                 <label class="control-label">{{ field.label }}</label>
                                                 {{ field|add_class:"form-control input-md" }}
                                                 <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
@@ -34,8 +40,8 @@
                                         {%else%}
                                             <div
                                                 class="col-md-{% if field.name in 'full_name\ocupation\email' %}6
-                                                {% elif field.name in 'color\sex\marital_state\date_birth\local_birth' %}6
-                                                {% elif field.name in 'address' %}12
+                                                {% elif field.name in 'color\sex\marital_state\date_birth\local_birth\Type_Logradouro_idLogradouro\address_number\address_cep\Medical_Insurance_idMedical_insurance\Color_idColor\Marital_State_idMarital_State' %}4
+                                                {% elif field.name in 'Color_idColor' %}3
                                                 {% elif field.name in 'health_insurance' %}3
                                                 {% elif field.name in 'summary' %}12
                                                 {% else %}6
@@ -47,48 +53,6 @@
                                             </div>
                                     {%endif%}
                                     {% endfor %}
-                                    <div class="card">
-                                        <div class="card-body" >
-                                            <table class="table table-striped table-bordered" id="usercommitee" class="link-formset">
-                                                <thead>
-                                                    <tr>
-                                                        <th >Número</th>
-                                                        <th>Tipo</th>
-                                                        <th>Ação</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    {% for phone in second_form %}
-                                                    {% if phone.errors %}
-                                                        <tr {% if not phone.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
-                                                            {{ phone.id }}
-                                                            <td>
-                                                                {{ phone.phone_number|add_class:"form-control input-md" }}
-                                                                <span class="help-inline error">{{ phone.phone_number.errors}}</span>
-                                                            </td>
-                                                            <td>
-                                                                {{ phone.phone_type|add_class:"form-control input-md" }}
-                                                            </td>
-                                                            <td>{{phone.DELETE}}</td>
-                                                        </tr>
-                                                    {%else%}
-                                                        <tr {% if not phone.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
-                                                            {{ phone.id }}
-                                                            <td>
-                                                                {{ phone.phone_number|add_class:"form-control input-md" }}
-                                                            </td>
-                                                            <td>
-                                                                {{ phone.phone_type|add_class:"form-control input-md" }}
-                                                            </td>
-                                                            <td>{{phone.DELETE}}</td>
-                                                        </tr>
-                                                    {%endif%}
-                                                    {% endfor %}
-                                                </tbody>
-                                            </table>
-                                            {{ second_form.management_form }}
-                                        </div>
-                                    </div>
 
                                 </div>
                                 </fieldset>
@@ -111,21 +75,7 @@
 {% endblock %}
 
 {% block js %}
-    {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> {% endcomment %}
     <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/jquery.formset.js' %}"></script>
-    <script>
-        $('#usercommitee tbody tr').formset({
-			prefix: '{{ second_form.prefix }}',
-            addText: '<i class="menu-icon fa fa-plus-square-o"></i> Adicionar',
-			addCssClass: 'btn btn-success adicionar',
-            deleteText: '<i class="menu-icon fa fa-trash"></i>',
-            deleteCssClass: 'btn btn-danger',
-            deleteCssClass: 'delete-row',
-			formCssClass: 'dynamic-form', 
-
-        });
-    </script>
     <script>
         {% comment %} $( document ).ready(function() {
             if ({{alert}}==0){
