--- a/ubs/patient/templates/patient/detail.html
+++ b/ubs/patient/templates/patient/detail.html
@@ -11,126 +11,75 @@
             <div class="row">
                 <div class="col-md-10" style="margin: 20px auto;">
                     <div class="card">
-                        <div class="card-header"><strong>Telefone</strong>
+                        <div class="card-header"><strong>Paciente</strong>
                         </div>
 
                         <fieldset>
-
                             <div class="form-group">
                                 {% for field in form %}
-                                {% if field.errors %}
-                                <div
-                                    class="col-md-{% if field.name in 'name' %}8{% elif field.name in 'main_complaint\email' %}6{% elif field.name in 'username\sex\birth_date\marital_status\phone\cpf\rg\matricula' %}4{% elif field.name in 'nome_mae\nome_pai' %}6{% else %}12{% endif %} margin-bottom-15 has-error has-feedback">
-                                    <label class="control-label">{{ field.label }}</label>
-                                    {{ field|add_class:"form-control input-md" }}
-                                    <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                    {% for error in field.errors%}
-                                    <span class="help-inline error">{{ error}}</span>
-                                    {% endfor%}
-                                </div>
-                                {%else%}
-                                {% if field.name in 'priority\opened'%}
-
-                                <div class="checkbox col-md-12" style="margin-top: 15px;">
-                                    <label>
-                                        <input type="checkbox" name="{{ field.name }}" id="id_{{ field.name }}"
-                                            {% if field.value %} checked {% endif %}> {{ field.label }}
-                                    </label>
-                                </div>
-
-                                {%else%}
-                                <div class="col-md-6 margin-bottom-15">
-
-                                    {% if field.name in 'Type_Logradouro_idLogradouro'   %}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        <input type="text" class="form-control input-md" readonly value={{ object.Type_Logradouro_idLogradouro}}> 
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% elif field.name == 'City_codIBGE'%}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        <input type="text" class="form-control input-md" readonly value={{ object.City_codIBGE}}> 
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% elif field.name in Color_idColor %}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        <input type="text" class="form-control input-md" readonly value={{ object.Color_idColor}}> 
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% elif field.name in 'Marital_State_idMarital_State'%}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        <input type="text" class="form-control input-md" readonly value={{ object.Marital_State_idMarital_State}}> 
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% elif field.name in 'Ocupation_idOcupation'%}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        <input type="text" class="form-control input-md" readonly value={{ object.Ocupation_idOcupation}}> 
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% elif field.name in 'Medical_Insurance_idMedical_insurance'%}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        <input type="text" class="form-control input-md" readonly value={{ object.Medical_Insurance_idMedical_insurance}}> 
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% elif field.name in 'sex' %}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        <input type="text" class="form-control input-md" readonly value={% if object.sex == "M" %} "Masculino" {% elif object.sex == "F" %} "Feminino" {% else %} "Outro" {% endif %}> 
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% elif field.name in 'image_patient' %}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        {% if object.image_patient %}
-                                            <br>
-                                            <button type="button" class="btn btn-outline-link"><a href="/ubs/media_images/{{ object.image_patient }}" target="blank"> Imagem do paciente <i class="fa fa-download"></i> </a></button>
+                                        {% if field.name in 'Type_Logradouro_idLogradouro'   %}
+                                            <div class="col-md-4 margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                <input type="text" class="form-control input-md" readonly value={{ object.Type_Logradouro_idLogradouro}}> 
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% elif field.name == 'City_codIBGE'%}
+                                            <div class="col-md-6 margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                <input type="text" class="form-control input-md" readonly value={{ object.City_codIBGE}}> 
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% elif field.name in 'Color_idColor' %}
+                                            <div class="col-md-4 margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                <input type="text" class="form-control input-md" readonly value={{ object.Color_idColor}}> 
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% elif field.name in 'Marital_State_idMarital_State'%}
+                                            <div class="col-md-4 margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                <input type="text" class="form-control input-md" readonly value={{ object.Marital_State_idMarital_State}}> 
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% elif field.name in 'Ocupation_idOcupation'%}
+                                            <div class="col-md-6 margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                <input type="text" class="form-control input-md" readonly value={{ object.Ocupation_idOcupation}}> 
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% elif field.name in 'Medical_Insurance_idMedical_insurance'%}
+                                            <div class="col-md-4 margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                <input type="text" class="form-control input-md" readonly value={{ object.Medical_Insurance_idMedical_insurance}}> 
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% elif field.name in 'sex' %}
+                                            <div class="col-md-4 margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                <input type="text" class="form-control input-md" readonly value={% if object.sex == "M" %} "Masculino" {% elif object.sex == "F" %} "Feminino" {% else %} "Outro" {% endif %}> 
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% elif field.name in 'image_patient' %}
+                                            <div class="col-md-6 margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                {% if object.image_patient %}
+                                                    <br>
+                                                    <button type="button" class="btn btn-outline-link"><a href="/ubs/media_images/{{ object.image_patient }}" target="blank"> Imagem do paciente <i class="fa fa-download"></i> </a></button>
+                                                {% else %}
+                                                    <input type="text" class="form-control input-md" readonly> 
+                                                {% endif %} 
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
                                         {% else %}
-                                            <input type="text" class="form-control input-md" readonly> 
-                                        {% endif %} 
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% else %}
-                                        <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                        {{ field|add_class:"form-control input-md" }}
-                                        <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                                    {% endif %}
-                                </div>
-                                {% endif %}
-                                {%endif%}
-                                {% endfor %}
-                                
-                                <div class="card">
-                                        <div class="card-body" >
-                                            <table class="table table-striped table-bordered" id="usercommitee" class="link-formset">
-                                                <thead>
-                                                    <tr>
-                                                        <th >Número</th>
-                                                        <th>Tipo</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    {% for phone in second_form %}
-                                                    {% if phone.errors %}
-                                                        <tr {% if not phone.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
-                                                            {{ phone.id }}
-                                                            <td>
-                                                                {{ phone.phone_number|add_class:"form-control input-md" }}
-                                                                <span class="help-inline error">{{ phone.phone_number.errors}}</span>
-                                                            </td>
-                                                            <td>
-                                                                {{ phone.phone_type|add_class:"form-control input-md" }}
-                                                            </td>
-                                                            <td>{{phone.DELETE}}</td>
-                                                        </tr>
-                                                    {%else%}
-                                                        <tr {% if not phone.pk %} class="dynamic-form"{% endif %}  id="{{ usercommittee.prefix }}-row">
-                                                            {{ phone.id }}
-                                                            <td>
-                                                                {{ phone.phone_number|add_class:"form-control input-md" }}
-                                                            </td>
-                                                            <td>
-                                                                <input type="text" class="form-control input-md" readonly value={{ model_phone.phone_type }}> 
-                                                                {% comment %} {{ phone.phone_type|add_class:"form-control input-md" }} {% endcomment %}
-                                                            </td>
-                                                        </tr>
-                                                    {%endif%}
-                                                    {% endfor %}
-                                                </tbody>
-                                            </table>
-                                            {{ second_form.management_form }}
-                                        </div>
-                                    </div>
-
-                            </div>
+                                            <div class="col-md-{% if field.name in 'date_birth\local_birth\address_number\address_cep' %}4
+                                                {% else %}6
+                                                {% endif %} margin-bottom-15">
+                                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                                {{ field|add_class:"form-control input-md" }}
+                                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                                            </div>
+                                        {% endif %}
+                                {% endfor %}       
                         </fieldset>
 
                         <br>
