feat: importação de dados atraves do django admin para as tabelas Ocupation, Statet e City

--- a/ubs/patient/templates/patient/add.html
+++ b/ubs/patient/templates/patient/add.html
@@ -35,7 +35,7 @@
                                                 <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
                                                 
                                                 {% for error in field.errors%}
-                                                    <span class="help-inline error">{{ error}}</span>
+                                                    <span class="help-inline error">{{ field.errors}}</span>
                                                 {% endfor%}
                                             </div>
                                         {% else %}
