--- a/ubs/medical_query/templates/querys/add.html
+++ b/ubs/medical_query/templates/querys/add.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col-md-10" style="margin: 20px auto;">
                         <div class="card">
-                            <div class="card-header"><strong>Consulta</strong><small> Consulta de Paciente</small>
+                            <div class="card-header"><strong>{{patient}}</strong>
                             </div>
                             
                     <fieldset>
@@ -40,8 +40,8 @@
                                         
                                         {%else%}
                                             <div
-                                                class="col-md-{% if field.name in 'patient\summary\review_of_systems' %}12
-                                                {% elif field.name in 'main_complaint\current_health_history/epidemiological_history/previous_pathological_history/family_history/physiological_personal_antecedents' %}6
+                                                class="col-md-{% if field.name in 'summary\review_of_systems\main_complaint\current_health_history\type_query' %}12
+                                                {% elif field.name in 'epidemiological_history/previous_pathological_history/family_history/physiological_personal_antecedents' %}6
                                                 {% elif field.name in 'physical_exam\pa_exam\p_exam\fc_exam\fr_exam\tax_exam\peso_exam\heigth_exam' %}3         
 
                                                 {% else %}6
