--- a/ubs/medical_query/templates/forwarding/await_querys.html
+++ b/ubs/medical_query/templates/forwarding/await_querys.html
@@ -77,9 +77,17 @@
                                             <a href="{% url 'medical_query:add_query' object.patient.id object.id %}">
                                                 <button type="button" class="btn btn-success btn-md"
                                                     style="border-radius: 3px;">
+                                                    <i class="fa fa-heartbeat" aria-hidden="true"></i>
+                                                </button>
+                                            </a>
+
+                                            <a href="{% url 'medical_query:add_query' object.patient.id object.id %}">
+                                                <button type="button" class="btn btn-primary btn-md" style="border-radius: 3px;">
                                                     <i class="fa fa-address-card" aria-hidden="true"></i>
                                                 </button>
                                             </a>
+
+
                                         </div>
                                     </td>
                                 </tr>
