--- a/ubs/medical_query/templates/querys/detail.html
+++ b/ubs/medical_query/templates/querys/detail.html
@@ -82,6 +82,30 @@
                                     {%endif%}
                                 {% endfor %}
 
+                      
+
+                            {% for field in third_form_class %}
+                            {% if field.errors %}
+                            
+                            <div class="col-md-12 margin-bottom-15">
+                            
+                                <label class="control-label">{{ field.label }}</label>
+                                {{ field|add_class:"form-control input-md" }}
+                                <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
+                                {% for error in field.errors%}
+                                <span class="help-inline error">{{ error }}</span>
+                                {% endfor%}
+                            </div>
+                            {%else%}
+                            <div class="col-md-12 margin-bottom-15">
+                            
+                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
+                                {{ field|add_class:"form-control input-md" }}
+                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
+                            </div>
+                            {%endif%}
+                            {% endfor %}
+
 
                             </div>
                         </fieldset>
