--- a/ubs/medical_query/templates/querys/detail.html
+++ b/ubs/medical_query/templates/querys/detail.html
@@ -82,33 +82,13 @@
                                     {%endif%}
                                 {% endfor %}
 
+
+                            <div class="col-md-12" style="margin-top: 4%; margin-bottom: 3%; font-size: 18px;" >
+                                <label class="control-label">CID 10 <strong>{{cid10.CID10_idCID10}}</strong></label>
+                            </div>
                       
-
-                            {% for field in third_form_class %}
-                            {% if field.errors %}
-                            
-                            <div class="col-md-12 margin-bottom-15">
-                            
-                                <label class="control-label">{{ field.label }}</label>
-                                {{ field|add_class:"form-control input-md" }}
-                                <span class="text-danger"> <strong>{{ field.help_text }}</strong> </span>
-                                {% for error in field.errors%}
-                                <span class="help-inline error">{{ error }}</span>
-                                {% endfor%}
-                            </div>
-                            {%else%}
-                            <div class="col-md-12 margin-bottom-15">
-                            
-                                <label class="control-label" style="margin-top: 10px;">{{ field.label }}</label>
-                                {{ field|add_class:"form-control input-md" }}
-                                <span class="text-danger"> <strong>{{ field.help_text }}</strong></span>
-                            </div>
-                            {%endif%}
-                            {% endfor %}
-
-
-                            </div>
                         </fieldset>
+
 
                         <br>
 
