--- a/ubs/medical_query/templates/query_has_CID10/list.html
+++ b/ubs/medical_query/templates/query_has_CID10/list.html
@@ -2,7 +2,7 @@
 {% extends 'core/base.html' %}
 {% load staticfiles %}
 
-{% block title %} Listagem de cidade {% endblock %}
+{% block title %} Listagem de CID-consulta {% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href={% static "vendors/datatables.net-bs4/css/dataTables.bootstrap4.min.css" %}>
@@ -22,7 +22,7 @@
     
                     <h5 class="modal-title" id="staticModalLabel">
                         <p id="content_remove">
-                            Têm certeza de que deseja remover esta cidade?
+                            Têm certeza de que deseja remover esta classificacão?
                         </p>
                     </h5>
     
@@ -32,7 +32,7 @@
                 </div>
                 <div class="modal-body">
                     <p id="msg_remove">
-                        Ao clicar em confirmar a cidade <strong id="user_remove_alert"></strong> será removido
+                        Ao clicar em confirmar a classificacão <strong id="user_remove_alert"></strong> será removido
                         permanentemente. Essa ação não poderá ser desfeita!
                     </p>
                 </div>
@@ -55,49 +55,46 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <strong class="card-title">Cidades</strong>
+                        <strong class="card-title">Doença da Consulta</strong> <small> Relação da consulta com a doença</small>
                     </div>
                     <div class="card-body">
-                        <a href="{% url 'patient:add_city' %}"> <button type="button" class="btn btn-success btn-sm" style="border-radius: 3px;"><i class="fa fa-plus-square-o" > Cadastrar</i></button></a>
+                        <a href="{% url 'medical_query:add_CID_query' %}"> <button type="button" class="btn btn-success btn-sm" style="border-radius: 3px;"><i class="fa fa-plus-square-o" > Cadastrar</i></button></a>
                     </div>
                     <div class="card-body">
                         <table id="bootstrap-data-table-export listItems" class="table table-striped table-bordered" >
                             <thead>
                                 <tr>
-                                    <th>Código IBGE7</th>
-                                    <th>Cidade</th>
-                                    <th>Estado</th>
+                                    <th>Paciente</th>
+                                    <th>CID</th>
                                     <th class="text-center">Ações</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for object in object_list%}
-                                <tr id="line-{{object.codIBGE}}">
-                                    <td> {{ object.codIBGE7}} </td>
-                                    <td> {{ object.name_city}} </td>
-                                    <td> {{ object.State_codIBGE_UF}} </td>
-                                    
+                                <tr id="line-{{object.idCID10}}">
+                                    <td> {{ object.Query_idQuery_CID}} </td>
+                                    <td> {{ object.CID10_idCID10 }} </td>
                                     <td class="text-center">
                                         <div>
-                                            <a href="{% url 'patient:detail_city' object.codIBGE %} ">
+                                                {% comment %} <a href="{% url 'medical_query:detail_CID' object.idCID10 %}">
                                                 <button type="button" class="btn btn-primary btn-sm"
                                                     style="border-radius: 3px;">
                                                     <i class="fa fa-eye"></i>
                                                 </button>
                                             </a>
 
-                                            <a href=" {% url 'patient:update_city' object.codIBGE %} ">
+                                            <a href="{% url 'medical_query:update_CID' object.idCID10 %}">
                                                 <button type="button" class="btn btn-warning btn-sm"
                                                     style="border-radius: 3px;">
                                                     <i class="fa fa-edit"></i>
                                                 </button>
-                                            </a>
+                                            </a>  {% endcomment %}
 
 
                                             <a >
                                                 <button type="button" class="btn btn-danger btn-sm" 
-                                                    id = "{{ object.codIBGE }}" 
-                                                    name = "{{object.name_city}}"
+                                                    id = "{{ object.idCID10 }}" 
+                                                    name = "{{object.desc_CID10}}"
                                                     data-toggle="modal" 
                                                     data-target="#staticModal"
                                                     onclick="get_datas(this.name,this.id)"
@@ -118,8 +115,6 @@
         </div>
     </div><!-- .animated -->
 </div><!-- .content -->
-
-
 {% endblock%}
 
 {% block js %}
@@ -135,7 +130,7 @@
         }
         function remove_user() {
 
-            urlDel = "http://localhost:8000/paciente/delete-cidade/" + id_user
+            urlDel = "http://localhost:8000/medical_query/delete-CID/" + id_user
 
             let xhr = new XMLHttpRequest()
 
@@ -146,17 +141,17 @@
                 status = response['code']
                 if (status == 1) {
                     document.getElementById('line-' + id_user).className = 'd-none'
-                    document.getElementById('msg_remove').innerHTML = "A exlusão da cidade foi realizada com sucesso."
+                    document.getElementById('msg_remove').innerHTML = "A exlusão da classificação foi realizada com sucesso."
                     document.getElementById('icon_remove').className = "fa fa-check-circle-o"
                     document.getElementById('icon_remove').style = "color: green; font-size:30px;"
-                    document.getElementById('content_remove').innerHTML = "Cidade removido com sucesso!"
+                    document.getElementById('content_remove').innerHTML = "Classificação removido com sucesso!"
                     document.getElementById('btn_cancel').className = "d-none"
                     document.getElementById('btn_confirm').className = "d-none"
 
                 } else {
 
-                    document.getElementById('msg_remove').innerHTML = "Não foi possivel excluir esta cidade, por favor consulte um dos administradores do sistema ou um técnico."
-                    document.getElementById('content_remove').innerHTML = "Erro! Houve um erro ao excluir a cidade selecionado!"
+                    document.getElementById('msg_remove').innerHTML = "Não foi possivel excluir esta classificação, por favor consulte um dos administradores do sistema ou um técnico."
+                    document.getElementById('content_remove').innerHTML = "Erro! Houve um erro ao excluir a classificação selecionada!"
                     document.getElementById('btn_cancel').className = "d-none"
                     document.getElementById('btn_confirm').className = "d-none"
 
@@ -168,10 +163,10 @@
 
         function reset_html() {
 
-            document.getElementById('msg_remove').innerHTML = "Ao clicar em confirmar a cidade <strong id='user_remove_alert'>" + user_name + "</strong> será removido permanentemente. Essa ação não poderá ser desfeita!"
+            document.getElementById('msg_remove').innerHTML = "Ao clicar em confirmar a classificação <strong id='user_remove_alert'>" + user_name + "</strong> será removida permanentemente. Essa ação não poderá ser desfeita!"
             document.getElementById('icon_remove').className = "fa fa-exclamation-triangle"
             document.getElementById('icon_remove').style = "font-size: 30px; color:#dc3545;"
-            document.getElementById('content_remove').innerHTML = "Têm certeza de que deseja remover esta cidade?"
+            document.getElementById('content_remove').innerHTML = "Têm certeza de que deseja remover esta classificação?"
             document.getElementById('btn_cancel').className = "btn btn-secondary"
             document.getElementById('btn_confirm').innerHTML = "Confirmar"
             document.getElementById('btn_confirm').className = "btn btn-primary"
@@ -190,5 +185,4 @@
     <script src={% static "vendors/datatables.net-buttons/js/buttons.print.min.js" %}></script>
     <script src={% static "vendors/datatables.net-buttons/js/buttons.colVis.min.js" %}></script>
     {% comment %} <script src={% static "assets/js/init-scripts/data-table/datatables-init.js" %}></script> {% endcomment %}
-
-{% endblock%} 
+{% endblock%}
