--- a/ubs/patient/templates/medical_insurance/list.html
+++ b/ubs/patient/templates/medical_insurance/list.html
@@ -114,6 +114,9 @@
         </div>
     </div><!-- .animated -->
 </div><!-- .content -->
+
+{% include 'core/pagination.html' %}
+
 {% endblock%}
 
 {% block js %}
