--- a/ubs/patient/templates/ocupation/list.html
+++ b/ubs/patient/templates/ocupation/list.html
@@ -115,6 +115,9 @@
         </div>
     </div><!-- .animated -->
 </div><!-- .content -->
+
+{% include 'core/pagination.html' %}
+
 {% endblock%}
 
 {% block js %}
