--- a/ubs/patient/templates/marital_state/list.html
+++ b/ubs/patient/templates/marital_state/list.html
@@ -115,6 +115,8 @@
         </div>
     </div><!-- .animated -->
 </div><!-- .content -->
+{% include 'core/pagination.html' %}
+
 {% endblock%}
 
 {% block js %}
