--- a/ubs/patient/templates/patient/list.html
+++ b/ubs/patient/templates/patient/list.html
@@ -127,6 +127,8 @@
         </div>
     </div><!-- .animated -->
 </div><!-- .content -->
+{% include 'core/pagination.html' %}
+
 {% endblock%}
 
 {% block js %}
