--- a/ubs/patient/templates/state/list.html
+++ b/ubs/patient/templates/state/list.html
@@ -119,6 +119,8 @@
     </div><!-- .animated -->
 </div><!-- .content -->
 
+{% include 'core/pagination.html' %}
+
 {% endblock%}
 
 {% block js %}
