feat: todas as listagens com paginator

--- a/ubs/core/templates/core/pagination.html
+++ b/ubs/core/templates/core/pagination.html
@@ -5,7 +5,7 @@
         {% if page_obj.has_other_pages %}
         
         <nav>
-            <ul class="pagination pagination-md no-margin pull-right">
+            <ul class="pagination pagination-md no-margin justify-content-center">
                 {# Previous page link #}
                 {% if page_obj.has_previous %}
                 <li class="page-item">
