--- a/ubs/medical_query/templates/query_has_CID10/list.html
+++ b/ubs/medical_query/templates/query_has_CID10/list.html
@@ -115,6 +115,7 @@
         </div>
     </div><!-- .animated -->
 </div><!-- .content -->
+{% include 'core/pagination.html' %}
 {% endblock%}
 
 {% block js %}
