novas funcionalidades no menu de tecnicos

--- a/ubs/accounts/templates/users/clerk/add.html
+++ b/ubs/accounts/templates/users/clerk/add.html
@@ -54,8 +54,8 @@
 
                     <div class="alert alert-danger">
                         <strong>Atenção:</strong>
-                        Você está adicionado ao sistema um usuário com permissões de <strong>ATENDENTE.</strong> Usuários
-                        atendentes possuem acesso <strong>LIMITADO.</strong>
+                        Você está adicionado ao sistema um usuário com permissões de <strong>TÉCNICO.</strong> Usuários
+                        técnicos possuem acesso <strong>ILIMITADO.</strong>
                     </div>
 
                 </div>
