--- a/ubs/accounts/templates/users/doctor/list.html
+++ b/ubs/accounts/templates/users/doctor/list.html
@@ -57,6 +57,12 @@
                     <div class="card-header">
                         <strong class="card-title">Usuários com permissões de médico</strong>
                     </div>
+
+                    <div class="card-body">
+                        <a href="{% url 'accounts:add_doctor' %}"> <button type="button" class="btn btn-success btn-sm"
+                                style="border-radius: 3px;"><i class="fa fa-plus-square-o"> Cadastrar</i></button></a>
+                    </div>
+
                     <div class="card-body">
                         <table id="bootstrap-data-table-export listItems" class="table table-striped table-bordered" >
                             <thead>
