detalhes do tecnico e medico

--- a/ubs/accounts/templates/users/clerk/list.html
+++ b/ubs/accounts/templates/users/clerk/list.html
@@ -96,7 +96,7 @@
 
                                     <td class="text-center">
                                         <div>
-                                            <a href="{% url 'patient:detail_patient' object.id %}">
+                                            <a href="{% url 'accounts:detail_clerk' object.id %}">
                                                 <button type="button" class="btn btn-primary btn-sm"
                                                     style="border-radius: 3px;">
                                                     <i class="fa fa-eye"></i>
