--- a/ubs/medical_query/templates/forwarding/await_querys.html
+++ b/ubs/medical_query/templates/forwarding/await_querys.html
@@ -6,7 +6,7 @@
 {% block head %}
 <link rel="stylesheet" href={% static "vendors/datatables.net-bs4/css/dataTables.bootstrap4.min.css" %}>
 <link rel="stylesheet" href={% static "vendors/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css" %}>
-<script src="https://js.pusher.com/5.1/pusher.min.js"></script>
+
 {% endblock%}
 
 {% block body %}
@@ -82,7 +82,7 @@
                             </thead>
                             <tbody>
                                 {% for object in currents_forwardings%}
-                                <tr id="line-{{object.id}}">
+                                <tr id="{{object.id}}">
                                     <td> {{ object.patient}} </td>
                                     <td> 
                                         {{ object.priority}} 
@@ -185,8 +185,10 @@
 
 </script>
 
-<script>
+<script src="https://js.pusher.com/5.1/pusher.min.js"></script>
 
+<script>
+        
     // Enable pusher logging - don't include this in production
         Pusher.logToConsole = true;
 
@@ -197,7 +199,10 @@
 
         var channel = pusher.subscribe('my-channel');
         channel.bind('my-event', function (data) {
-            alert(JSON.stringify(data));
+            response = data
+
+            
+            document.getElementById(response.message).style = "display: none;"
         });
 
 </script>
