url de atendimentos do dia no menu

--- a/ubs/core/templates/core/menu_medical.html
+++ b/ubs/core/templates/core/menu_medical.html
@@ -14,7 +14,7 @@
 
         <h3 class="menu-title">Atendimentos</h3><!-- /.menu-title -->
         <li class="menu-item-has-children dropdown" >
-            <a href="{% url 'medical_query:currents_forwarding' %}" class="dropdown-toggle" data-toggle="" aria-haspopup="true" aria-expanded="false">
+            <a href="{% url 'medical_query:await_querys' %}" class="dropdown-toggle" data-toggle="" aria-haspopup="true" aria-expanded="false">
                 Atendimentos do dia
             </a>
         </li>
